# mat-words

./: .gitignore  .pre-commit-config.yaml  .secrets.yaml  pyproject.toml  settings.yaml
data/: .gitignore  vk.db.dvc
notebooks/: pyproject.toml
src/: __init__.py  api.py  cli.py  config.py  db.py  etl.py  utils.py
tests/: test_api_response_parsing.py  test_utils.py
