[tool.poetry]
name = "mat-words"
version = "0.1.0"
description = ""
authors = ["Vsevolod Shegolev <v@sheg.cc>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
httpx = { extras = ["http2"], version = "^0.20.0" }
pandas = "^1.3.4"
pydantic = "^1.8.2"
peewee = "^3.14.8"
ipykernel = "^6.5.1"
pytest = "^6.2.5"
loguru = "^0.5.3"
dynaconf = "^3.1.7"
pre-commit = "^2.15.0"
tqdm = "^4.62.3"
retry = "^0.9.2"
spacy = "^3.2.1"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
pylint = "^2.11.1"

[tool.poetry.scripts]
vkd = "src.cli:cli"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]

[tool.pylint.'MESSAGES CONTROL']
disable = [
    'missing-module-docstring',
    'too-few-public-methods',
    'use-implicit-booleaness-not-comparison',
    'import-error',
]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target_version = ['py310']
skip-string-normalization = true
experimental-string-processing = true
